--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Praise Each</title>
+    <script type="module" crossorigin src="/dist/index.cadc432b.js"></script>
+    <link rel="stylesheet" href="/dist/index.1a5c4499.css">
   </head>
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/index.tsx"></script>
+    
   </body>
 </html>
