--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Praise Each</title>
-    <script type="module" crossorigin src="/dist/index.b6650403.js"></script>
-    <link rel="stylesheet" href="/dist/index.4dcc7895.css">
+    <script type="module" crossorigin src="/src/index.tsx"></script>
   </head>
 
   <body>
     <div id="app"></div>
-    
   </body>
 </html>
